--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bulma": "^0.7.4",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "get-pixels": "^3.3.2",
+    "html-webpack-plugin": "^3.2.0",
+    "png-chunks-extract": "^1.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.0"
+    "react-scripts": "3.0.0",
+    "speed-measure-webpack-plugin": "^1.3.1",
+    "upng-js": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "webpack && webpack-dev-server --open --mode=development",
+    "build": "webpack --config webpack.config.build.js --mode production",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -27,5 +34,22 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.1",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^3.0.1",
+    "node-sass": "^4.11.0",
+    "prop-types": "^15.7.2",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
+    "workbox-webpack-plugin": "^4.3.0"
+  },
+  "PUBLIC_URL": "https://localhost:8080"
 }
