--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "dependencies": {
     "bulma": "^0.7.4",
+    "child_process": "^1.0.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "get-pixels": "^3.3.2",
     "html-webpack-plugin": "^3.2.0",
+    "paralleljs": "^0.2.1",
     "png-chunks-extract": "^1.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-github-corner": "^2.3.0",
     "react-scripts": "3.0.0",
     "speed-measure-webpack-plugin": "^1.3.1",
     "upng-js": "^2.1.0"
